fable.remoting server

--- a/src/extension/Extension.fsproj
+++ b/src/extension/Extension.fsproj
@@ -12,6 +12,9 @@
       <Paket>True</Paket>
       <Link>paket-files/Helpers.fs</Link>
     </Compile>
+    <Compile Include="..\Shared.fs">
+      <Link>Shared.fs</Link>
+    </Compile>
     <Compile Include="extension.fs" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
