--- a/src/extension/Extension.fsproj
+++ b/src/extension/Extension.fsproj
@@ -15,6 +15,7 @@
     <Compile Include="..\Shared.fs">
       <Link>Shared.fs</Link>
     </Compile>
+    <Compile Include="Fable.Axios.fs" />
     <Compile Include="extension.fs" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
