feat: add shared project

--- a/src/Server/Server.fsproj
+++ b/src/Server/Server.fsproj
@@ -6,10 +6,10 @@
   </PropertyGroup>
   <ItemGroup>
     <None Include="paket.references" />
-    <Compile Include="..\Shared.fs">
-      <Link>Shared.fs</Link>
-    </Compile>
     <Compile Include="Server.fs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Shared\Shared.fsproj" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
