--- a/src/extension/Extension.fsproj
+++ b/src/extension/Extension.fsproj
@@ -12,11 +12,11 @@
       <Paket>True</Paket>
       <Link>paket-files/Helpers.fs</Link>
     </Compile>
-    <Compile Include="..\Shared.fs">
-      <Link>Shared.fs</Link>
-    </Compile>
     <Compile Include="Fable.Axios.fs" />
     <Compile Include="extension.fs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Shared\Shared.fsproj" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
