--- a/src/extension/Extension.fsproj
+++ b/src/extension/Extension.fsproj
@@ -13,6 +13,9 @@
       <Link>paket-files/Helpers.fs</Link>
     </Compile>
     <Compile Include="Fable.Axios.fs" />
+    <Compile Include="Remoting.fs" />
+    <Compile Include="Model.fs" />
+    <Compile Include="Agent.fs" />
     <Compile Include="extension.fs" />
   </ItemGroup>
   <ItemGroup>
