feat: add closePackage command

--- a/release/package.json
+++ b/release/package.json
@@ -21,22 +21,26 @@
     ],
     "activationEvents": [
       "onView:openXmlExplorer",
-      "onCommand:openxml-explorer.exploreFile"
+      "onCommand:openxml-explorer.explorePackage"
     ],
     "main": "./extension",
     "contributes": {
       "commands": [
         {
-            "command": "openxml-explorer.exploreFile",
-            "title": "Explore OpenXml"
+            "command": "openxml-explorer.explorePackage",
+            "title": "Explore OpenXml package"
         },
         {
-          "command": "openxml-explorer.clearView",
-          "title": "Clear OpenXml View"
+          "command": "openxml-explorer.closePackage",
+          "title": "Close package"
         },
         {
-          "command": "openOpenXmlResource",
-          "title": "Open OpenXml Resource"
+          "command": "openxml-explorer.closeAllPackage",
+          "title": "Close all packages"
+        },
+        {
+          "command": "openxml-explorer.openPart",
+          "title": "Open OpenXml part"
         }
       ],
       "languages": [
@@ -56,15 +60,21 @@
       "menus": {
         "explorer/context": [
           {
-            "command": "openxml-explorer.exploreFile",
+            "command": "openxml-explorer.explorePackage",
             "when": "resourceLangId == openxml",
             "group": "0_openxml@1"
           }
         ],
         "view/title": [
           {
-            "command": "openxml-explorer.clearView",
+            "command": "openxml-explorer.closeAllPackage",
             "when": "view == openXmlExplorer"
+          }
+        ],
+        "view/item/context": [
+          {
+            "command": "openxml-explorer.closePackage",
+            "when": "view == openXmlExplorer && viewItem == openxml"
           }
         ]
       },
