--- a/release/package.json
+++ b/release/package.json
@@ -1,7 +1,7 @@
 {
     "name": "openxml-explorer",
     "version": "0.0.1",
-    "publisher": "Sergey Tihon",
+    "publisher": "sergey-tihon",
     "contributors": [
         {
             "name": "Sergey Tihon",
@@ -86,5 +86,8 @@
           }
         ]
       }
-    }
+    },
+    "extensionDependencies": [
+      "ms-dotnettools.vscode-dotnet-runtime"
+    ]
   }
