--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "scripts": {},
   "dependencies": {
     "htmlparser2": "^6.0.1",
-    "platform-detect": "3.0.1"
+    "platform-detect": "3.0.1",
+    "axios": "^0.21.1",
+    "portfinder": "^1.0.28"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
@@ -11,7 +13,6 @@
     "@types/showdown": "^1.9.3",
     "@types/vscode": "^1.55.0",
     "@types/ws": "^7.2.6",
-    "axios": "^0.21.1",
     "babel-loader": "^8.1.0",
     "mocha": "^8.1.3",
     "showdown": "^1.9.1",
