--- a/src/extension/Extension.fsproj
+++ b/src/extension/Extension.fsproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -14,6 +14,7 @@
     </Compile>
     <Compile Include="Fable.Axios.fs" />
     <Compile Include="Fable.PortFinder.fs" />
+    <Compile Include="Helpers.fs" />
     <Compile Include="Remoting.fs" />
     <Compile Include="Model.fs" />
     <Compile Include="Agent.fs" />
