--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -31,4 +31,4 @@ jobs:
     - name: Install VSCE
       run: yarn global add vsce
     - name: Build and Test
-      run: dotnet fake run build.fsx
+      run: dotnet fake run build.fsx -t Build
