--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -11,23 +11,23 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-latest, macos-latest]
-        dotnet: [6.0.413]
+        os: [macos-latest]
     runs-on: ${{ matrix.os }}
 
     steps:
-    - uses: actions/checkout@v1
+    - name: Checkout
+      uses: actions/checkout@v3
     - name: Setup .NET Core
-      uses: actions/setup-dotnet@v1
+      uses: actions/setup-dotnet@v4
+    - uses: actions/setup-node@v3
       with:
-        dotnet-version: ${{ matrix.dotnet }}
-    - uses: actions/setup-node@v2-beta
-      with:
-        node-version: '15.12.0'
+        node-version: '22'
+        cache: 'yarn'
+
     - name: Restore local tools
       run: dotnet tool restore
-    - name: Paket Restore
-      run: dotnet paket restore
+    - name: Restore dependencies
+      run: dotnet restore
     - name: Install VSCE
       run: yarn global add vsce
     - name: Build and Test
