--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -23,6 +23,8 @@ jobs:
       uses: actions/checkout@v3
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: "8.0.x"
     - uses: actions/setup-node@v3
       with:
         node-version: '22'
