--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,8 @@ jobs:
         ref: ${{ github.head_ref }}
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: "8.0.x"
     - uses: actions/setup-node@v3
       with:
         node-version: '22'
