--- a/tests/Server.Tests/Server.Tests.fsproj
+++ b/tests/Server.Tests/Server.Tests.fsproj
@@ -2,9 +2,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Content Include="paket.references" />
     <Compile Include="OpenXmlApi.Tests.fs" />
   </ItemGroup>
   <ItemGroup>
