--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {},
   "dependencies": {
+    "@babel/runtime": "^7.27.6",
     "axios": "^1.10.0",
     "htmlparser2": "^10.0.0",
     "platform-detect": "^3.0.1",
