--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
-  "scripts": {},
-  "dependencies": {
-    "@babel/runtime": "^7.27.6",
-    "axios": "^1.10.0",
-    "htmlparser2": "^10.0.0",
-    "platform-detect": "^3.0.1",
-    "portfinder": "^1.0.37"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.27.7",
-    "@babel/plugin-transform-runtime": "^7.27.4",
-    "@babel/preset-env": "^7.27.2",
-    "@types/showdown": "^2.0.6",
-    "@types/vscode": "^1.101.0",
-    "@types/ws": "^8.18.1",
-    "babel-loader": "^10.0.0",
-    "mocha": "^11.7.1",
-    "showdown": "^2.1.0",
-    "toml": "^3.0.0",
-    "vscode-debugadapter": "^1.51.0",
-    "webpack": "^5.99.9",
-    "webpack-cli": "^6.0.1",
-    "ws": "^8.18.2",
-    "xhr2": "^0.2.1",
-    "yarn-upgrade-all": "^0.7.5"
-  }
+    "scripts": {},
+    "dependencies": {
+        "@babel/runtime": "^7.27.6",
+        "axios": "^1.10.0",
+        "htmlparser2": "^10.0.0",
+        "platform-detect": "^3.0.1",
+        "portfinder": "^1.0.37"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.27.7",
+        "@babel/plugin-transform-runtime": "^7.27.4",
+        "@babel/preset-env": "^7.27.2",
+        "@types/showdown": "^2.0.6",
+        "@types/vscode": "^1.101.0",
+        "@types/ws": "^8.18.1",
+        "@vscode/debugadapter": "^1.51.0",
+        "babel-loader": "^10.0.0",
+        "mocha": "^11.7.1",
+        "showdown": "^2.1.0",
+        "toml": "^3.0.0",
+        "webpack": "^5.99.9",
+        "webpack-cli": "^6.0.1",
+        "ws": "^8.18.2",
+        "xhr2": "^0.2.1",
+        "yarn-upgrade-all": "^0.7.5"
+    }
 }
