--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -20,12 +20,12 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: "9.0.x"
-    - uses: actions/setup-node@v3
+        global-json-file: global.json
+    - uses: actions/setup-node@v4
       with:
         node-version: '22'
         cache: 'yarn'
